--- a/mscore/mscore/chord.ui
+++ b/mscore/mscore/chord.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>311</width>
-    <height>212</height>
+    <width>318</width>
+    <height>221</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -26,7 +26,7 @@
       <string notr="true" comment="do not translate">Chord</string>
      </property>
      <property name="flat">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
      <layout class="QVBoxLayout">
       <property name="spacing">
