--- a/mscore/mscore/textline.ui
+++ b/mscore/mscore/textline.ui
@@ -20,7 +20,7 @@
       <string>TextLine</string>
      </property>
      <property name="flat">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
