--- a/mscore/mscore/timesigwizard.ui
+++ b/mscore/mscore/timesigwizard.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>530</width>
-    <height>321</height>
+    <width>356</width>
+    <height>261</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -26,7 +26,7 @@
       <string>Enter Time Signature:</string>
      </property>
      <property name="flat">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
      <layout class="QHBoxLayout">
       <item>
@@ -90,7 +90,7 @@
       <string>Pickup Measure</string>
      </property>
      <property name="flat">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
      <property name="checkable">
       <bool>true</bool>
@@ -160,7 +160,7 @@
       <string>Enter Number of Measures:</string>
      </property>
      <property name="flat">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
      <layout class="QGridLayout">
       <property name="topMargin">
