--- a/mscore/share/styles/appstyle-dark.css
+++ b/mscore/share/styles/appstyle-dark.css
@@ -92,3 +92,8 @@ QMenu::item:selected {
       background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
          stop: 0 #787878, stop: 1 #888888);
       }
+QGroupBox::title {
+      subcontrol-origin: margin;
+      subcontrol-position: top left;
+      padding: 5px 5px;
+      }
