--- a/mscore/mscore/beam.ui
+++ b/mscore/mscore/beam.ui
@@ -26,7 +26,7 @@
       <string notr="true" comment="do not translate">Beam</string>
      </property>
      <property name="flat">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
      <layout class="QGridLayout">
       <property name="verticalSpacing">
