--- a/mscore/mscore/cellproperties.ui
+++ b/mscore/mscore/cellproperties.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>396</width>
+    <width>404</width>
     <height>118</height>
    </rect>
   </property>
@@ -47,7 +47,7 @@
         <string>Palette Cell Properties</string>
        </property>
        <property name="flat">
-        <bool>true</bool>
+        <bool>false</bool>
        </property>
        <layout class="QVBoxLayout" name="verticalLayout_2">
         <item>
