--- a/mscore/mscore/chordproperties.ui
+++ b/mscore/mscore/chordproperties.ui
@@ -50,7 +50,7 @@
            <string>Chord Properties</string>
           </property>
           <property name="flat">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_2">
            <item>
@@ -165,7 +165,7 @@
            <string>Note Properties</string>
           </property>
           <property name="flat">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
           <layout class="QHBoxLayout" name="horizontalLayout_2">
            <item>
