--- a/mscore/mscore/dynamic.ui
+++ b/mscore/mscore/dynamic.ui
@@ -26,7 +26,7 @@
       <string notr="true">Dynamic</string>
      </property>
      <property name="flat">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
      <layout class="QVBoxLayout">
       <property name="spacing">
