--- a/mscore/mscore/editstaff.ui
+++ b/mscore/mscore/editstaff.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>672</width>
+    <width>679</width>
     <height>418</height>
    </rect>
   </property>
@@ -51,7 +51,7 @@
       <string>Staff Properties</string>
      </property>
      <property name="flat">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
@@ -126,7 +126,7 @@
       <string>Part Properties</string>
      </property>
      <property name="flat">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
