--- a/mscore/mscore/measureproperties.ui
+++ b/mscore/mscore/measureproperties.ui
@@ -46,7 +46,7 @@
           <string>Staves</string>
          </property>
          <property name="flat">
-          <bool>true</bool>
+          <bool>false</bool>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout">
           <item>
@@ -124,7 +124,7 @@
           <string>Measure Duration</string>
          </property>
          <property name="flat">
-          <bool>true</bool>
+          <bool>false</bool>
          </property>
          <layout class="QGridLayout">
           <property name="verticalSpacing">
@@ -255,7 +255,7 @@
           <string>Other</string>
          </property>
          <property name="flat">
-          <bool>true</bool>
+          <bool>false</bool>
          </property>
          <layout class="QGridLayout" name="gridLayout">
           <item row="0" column="0">
