--- a/mscore/mscore/page.ui
+++ b/mscore/mscore/page.ui
@@ -26,7 +26,7 @@
       <string>Page</string>
      </property>
      <property name="flat">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
      <layout class="QGridLayout">
       <property name="margin">
