--- a/mscore/mscore/segment.ui
+++ b/mscore/mscore/segment.ui
@@ -26,7 +26,7 @@
       <string>Segment</string>
      </property>
      <property name="flat">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
      <layout class="QGridLayout" name="gridLayout_2">
       <item row="0" column="0" colspan="2">
