--- a/mscore/mscore/tempoproperties.ui
+++ b/mscore/mscore/tempoproperties.ui
@@ -1,7 +1,8 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>TempoProperties</class>
- <widget class="QDialog" name="TempoProperties" >
-  <property name="geometry" >
+ <widget class="QDialog" name="TempoProperties">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -9,43 +10,43 @@
     <height>159</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>MuseScore: Tempo Text Properties</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout" >
+  <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout" >
+    <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
-      <widget class="QLabel" name="label_3" >
-       <property name="sizePolicy" >
-        <sizepolicy vsizetype="Ignored" hsizetype="Fixed" >
+      <widget class="QLabel" name="label_3">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Ignored">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="text" >
+       <property name="text">
         <string/>
        </property>
-       <property name="pixmap" >
-        <pixmap resource="mscore.qrc" >:/data/bg1.jpg</pixmap>
+       <property name="pixmap">
+        <pixmap resource="mscore.qrc">:/data/bg1.jpg</pixmap>
        </property>
       </widget>
      </item>
      <item>
-      <widget class="QGroupBox" name="groupBox" >
-       <property name="title" >
+      <widget class="QGroupBox" name="groupBox">
+       <property name="title">
         <string>Tempo Properties</string>
        </property>
-       <property name="flat" >
-        <bool>true</bool>
+       <property name="flat">
+        <bool>false</bool>
        </property>
-       <layout class="QGridLayout" name="gridLayout" >
-        <item row="0" column="1" >
+       <layout class="QGridLayout" name="gridLayout">
+        <item row="0" column="1">
          <spacer>
-          <property name="orientation" >
+          <property name="orientation">
            <enum>Qt::Vertical</enum>
           </property>
-          <property name="sizeHint" stdset="0" >
+          <property name="sizeHint" stdset="0">
            <size>
             <width>20</width>
             <height>40</height>
@@ -53,41 +54,41 @@
           </property>
          </spacer>
         </item>
-        <item row="1" column="0" >
-         <widget class="QLabel" name="label" >
-          <property name="sizePolicy" >
-           <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
+        <item row="1" column="0">
+         <widget class="QLabel" name="label">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
-          <property name="text" >
+          <property name="text">
            <string>Tempo:</string>
           </property>
          </widget>
         </item>
-        <item row="1" column="1" >
-         <widget class="QDoubleSpinBox" name="tempo" >
-          <property name="suffix" >
+        <item row="1" column="1">
+         <widget class="QDoubleSpinBox" name="tempo">
+          <property name="suffix">
            <string>BPM</string>
           </property>
-          <property name="decimals" >
+          <property name="decimals">
            <number>1</number>
           </property>
-          <property name="minimum" >
+          <property name="minimum">
            <double>20.000000000000000</double>
           </property>
-          <property name="maximum" >
+          <property name="maximum">
            <double>400.000000000000000</double>
           </property>
          </widget>
         </item>
-        <item row="1" column="2" >
+        <item row="1" column="2">
          <spacer>
-          <property name="orientation" >
+          <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
-          <property name="sizeHint" stdset="0" >
+          <property name="sizeHint" stdset="0">
            <size>
             <width>44</width>
             <height>20</height>
@@ -95,12 +96,12 @@
           </property>
          </spacer>
         </item>
-        <item row="2" column="1" >
+        <item row="2" column="1">
          <spacer>
-          <property name="orientation" >
+          <property name="orientation">
            <enum>Qt::Vertical</enum>
           </property>
-          <property name="sizeHint" stdset="0" >
+          <property name="sizeHint" stdset="0">
            <size>
             <width>20</width>
             <height>35</height>
@@ -108,12 +109,12 @@
           </property>
          </spacer>
         </item>
-        <item row="3" column="0" colspan="3" >
-         <widget class="QDialogButtonBox" name="buttonBox" >
-          <property name="orientation" >
+        <item row="3" column="0" colspan="3">
+         <widget class="QDialogButtonBox" name="buttonBox">
+          <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
-          <property name="standardButtons" >
+          <property name="standardButtons">
            <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
           </property>
          </widget>
@@ -126,7 +127,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="mscore.qrc" />
+  <include location="mscore.qrc"/>
  </resources>
  <connections>
   <connection>
@@ -135,11 +136,11 @@
    <receiver>TempoProperties</receiver>
    <slot>accept()</slot>
    <hints>
-    <hint type="sourcelabel" >
+    <hint type="sourcelabel">
      <x>248</x>
      <y>254</y>
     </hint>
-    <hint type="destinationlabel" >
+    <hint type="destinationlabel">
      <x>157</x>
      <y>274</y>
     </hint>
@@ -151,11 +152,11 @@
    <receiver>TempoProperties</receiver>
    <slot>reject()</slot>
    <hints>
-    <hint type="sourcelabel" >
+    <hint type="sourcelabel">
      <x>316</x>
      <y>260</y>
     </hint>
-    <hint type="destinationlabel" >
+    <hint type="destinationlabel">
      <x>286</x>
      <y>274</y>
     </hint>
