--- a/mscore/mscore/transposedialog.ui
+++ b/mscore/mscore/transposedialog.ui
@@ -42,7 +42,7 @@
          <string>Transpose by Key</string>
         </property>
         <property name="flat">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
         <property name="checkable">
          <bool>true</bool>
@@ -172,7 +172,7 @@
          <string>Transpose by Interval</string>
         </property>
         <property name="flat">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
         <property name="checkable">
          <bool>true</bool>
@@ -350,7 +350,7 @@
          <string>Options</string>
         </property>
         <property name="flat">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout">
          <property name="spacing">
