--- a/mscore/mscore/tuplet.ui
+++ b/mscore/mscore/tuplet.ui
@@ -26,7 +26,7 @@
       <string notr="true" extracomment="do not translate">Tuplet</string>
      </property>
      <property name="flat">
-      <bool>true</bool>
+      <bool>false</bool>
      </property>
      <layout class="QGridLayout">
       <property name="margin">
