--- a/mscore/mscore/tupletproperties.ui
+++ b/mscore/mscore/tupletproperties.ui
@@ -1,7 +1,8 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>TupletProperties</class>
- <widget class="QDialog" name="TupletProperties" >
-  <property name="geometry" >
+ <widget class="QDialog" name="TupletProperties">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -9,59 +10,59 @@
     <height>300</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>MuseScore: Tuplet Properties</string>
   </property>
-  <layout class="QHBoxLayout" >
+  <layout class="QHBoxLayout">
    <item>
-    <layout class="QHBoxLayout" >
+    <layout class="QHBoxLayout">
      <item>
-      <widget class="QLabel" name="label_3" >
-       <property name="sizePolicy" >
-        <sizepolicy vsizetype="Ignored" hsizetype="Fixed" >
+      <widget class="QLabel" name="label_3">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Fixed" vsizetype="Ignored">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="text" >
+       <property name="text">
         <string/>
        </property>
-       <property name="pixmap" >
-        <pixmap resource="mscore.qrc" >:/data/bg1.jpg</pixmap>
+       <property name="pixmap">
+        <pixmap resource="mscore.qrc">:/data/bg1.jpg</pixmap>
        </property>
       </widget>
      </item>
      <item>
-      <layout class="QVBoxLayout" >
+      <layout class="QVBoxLayout">
        <item>
-        <widget class="QGroupBox" name="groupBox" >
-         <property name="title" >
+        <widget class="QGroupBox" name="groupBox">
+         <property name="title">
           <string>Number</string>
          </property>
-         <property name="flat" >
-          <bool>true</bool>
+         <property name="flat">
+          <bool>false</bool>
          </property>
-         <layout class="QVBoxLayout" >
-          <property name="margin" >
+         <layout class="QVBoxLayout">
+          <property name="margin">
            <number>3</number>
           </property>
           <item>
-           <widget class="QRadioButton" name="number" >
-            <property name="text" >
+           <widget class="QRadioButton" name="number">
+            <property name="text">
              <string>number</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QRadioButton" name="relation" >
-            <property name="text" >
+           <widget class="QRadioButton" name="relation">
+            <property name="text">
              <string>relation</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QRadioButton" name="noNumber" >
-            <property name="text" >
+           <widget class="QRadioButton" name="noNumber">
+            <property name="text">
              <string>nothing</string>
             </property>
            </widget>
@@ -70,34 +71,34 @@
         </widget>
        </item>
        <item>
-        <widget class="QGroupBox" name="groupBox_2" >
-         <property name="title" >
+        <widget class="QGroupBox" name="groupBox_2">
+         <property name="title">
           <string>Bracket</string>
          </property>
-         <property name="flat" >
-          <bool>true</bool>
+         <property name="flat">
+          <bool>false</bool>
          </property>
-         <layout class="QVBoxLayout" >
-          <property name="margin" >
+         <layout class="QVBoxLayout">
+          <property name="margin">
            <number>3</number>
           </property>
           <item>
-           <widget class="QRadioButton" name="autoBracket" >
-            <property name="text" >
+           <widget class="QRadioButton" name="autoBracket">
+            <property name="text">
              <string>auto bracket</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QRadioButton" name="bracket" >
-            <property name="text" >
+           <widget class="QRadioButton" name="bracket">
+            <property name="text">
              <string>bracket</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QRadioButton" name="noBracket" >
-            <property name="text" >
+           <widget class="QRadioButton" name="noBracket">
+            <property name="text">
              <string>nothing</string>
             </property>
            </widget>
@@ -106,11 +107,11 @@
         </widget>
        </item>
        <item>
-        <widget class="QDialogButtonBox" name="buttonBox" >
-         <property name="orientation" >
+        <widget class="QDialogButtonBox" name="buttonBox">
+         <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
-         <property name="standardButtons" >
+         <property name="standardButtons">
           <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
          </property>
         </widget>
@@ -122,7 +123,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="mscore.qrc" />
+  <include location="mscore.qrc"/>
  </resources>
  <connections>
   <connection>
@@ -131,11 +132,11 @@
    <receiver>TupletProperties</receiver>
    <slot>accept()</slot>
    <hints>
-    <hint type="sourcelabel" >
+    <hint type="sourcelabel">
      <x>248</x>
      <y>254</y>
     </hint>
-    <hint type="destinationlabel" >
+    <hint type="destinationlabel">
      <x>157</x>
      <y>274</y>
     </hint>
@@ -147,11 +148,11 @@
    <receiver>TupletProperties</receiver>
    <slot>reject()</slot>
    <hints>
-    <hint type="sourcelabel" >
+    <hint type="sourcelabel">
      <x>316</x>
      <y>260</y>
     </hint>
-    <hint type="destinationlabel" >
+    <hint type="destinationlabel">
      <x>286</x>
      <y>274</y>
     </hint>
