--- a/mscore/share/styles/appstyle-dark.css
+++ b/mscore/share/styles/appstyle-dark.css
@@ -4,6 +4,9 @@
       alternate-background-color: #626262;
       color: white
       }
+*:disabled {
+      color: gray
+      }
 QToolTip {
       color: black;
       opacity: 200;
